--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelControl.xaml
@@ -46,20 +46,15 @@
         </Grid.ColumnDefinitions>
 
         <Grid x:Name="FavoriteImageHolder">
-            <Image WidthRequest="{StaticResource HeaderFavoriteStarSize}" 
-                   HeightRequest="{StaticResource HeaderFavoriteStarSize}" 
-                   Grid.Column="0"
-                   Margin="{OnPlatform WinUI='0,8,4,8', Default='0,10,4,10'}" 
-                   IsVisible="{Binding IsFavorite, Mode=OneWay}"
-                   >
-                <Image.Source>
-                    <FontImageSource
-                            FontFamily="{StaticResource DefaultIconFont}"
-                            Glyph="{OnPlatform WinUI={x:Static style:SegoeIconFont.FavoriteStarFill}, Default={x:Static style:IconFont.Star}}"
-                            Color="{Binding ChannelColor, Converter={StaticResource StringToColorConverter}}"
-                            Size="{StaticResource HeaderFavoriteStarSize}"/>
-                </Image.Source>
-            </Image>
+            <Path   Style="{StaticResource PathIndicatorFavorite}"
+                    IsVisible="{Binding IsFavorite, Mode=OneWay}"
+                    WidthRequest="{StaticResource HeaderFavoriteStarSize}" 
+                    HeightRequest="{StaticResource HeaderFavoriteStarSize}" 
+                    Margin="{OnPlatform WinUI='0,0,4,0', Default='0,10,4,10'}"
+                    Fill="{Binding ChannelColor, Converter={StaticResource StringToColorConverter}}"
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center"
+                    />
         </Grid>
 
         <Label  Grid.Column="1"
