--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramSettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Program/ProgramSettingsPage.xaml
@@ -8,49 +8,36 @@
              Title="{Binding ProgramName, Mode=OneWay}"
              >
     <ScrollView Padding="{StaticResource NormalPageMargin}">
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
+        <VerticalStackLayout>
 
-            <Label  Grid.Row="0"
-                    IsVisible="{Binding IsBackgroundDownloadSupported}"
-                    Text="{x:Static r:Strings.ProgramInfo_Sorting_Description}" />
+            <Label Style="{StaticResource SubtitleTextBlockStyle}"
+                   Text="{x:Static r:Strings.ProgramInfo_Sorting_Title}"
+                    />
 
-            <Label  Grid.Row="1"
-                    Text="{x:Static r:Strings.ProgramInfo_Sorting_Order_Description}"
-                    Margin="0,0,0,8" />
+            <Label  Text="{x:Static r:Strings.ProgramInfo_Sorting_Description}" />
 
-            <Picker Grid.Row="2"
-                  SelectedIndex="{Binding SortOrderPosition, Mode=TwoWay}"
-                  ItemsSource="{Binding SortOrderStrings}" />
+            <Label  Text="{x:Static r:Strings.ProgramInfo_Sorting_Order_Description}"
+                    Margin="0,12,0,8" />
 
-            <Label Grid.Row="3"
-                    IsVisible="{Binding IsBackgroundDownloadSupported}"
+            <Picker SelectedIndex="{Binding SortOrderPosition, Mode=TwoWay}"
+                    ItemsSource="{Binding SortOrderStrings}" />
+
+            <Label  IsVisible="{Binding IsBackgroundDownloadSupported}"
+                    Style="{StaticResource SubtitleTextBlockStyle}"
                     Text="{x:Static r:Strings.ProgramInfo_AutoDownload_Title}"
                     Margin="0,16,0,0"
                     />
 
-            <Label Grid.Row="4"
-                    IsVisible="{Binding IsBackgroundDownloadSupported}"
+            <Label  IsVisible="{Binding IsBackgroundDownloadSupported}"
                     Text="{x:Static r:Strings.ProgramInfo_AutoDownload_Description}" />
 
-            <Label Grid.Row="5"
-                    IsVisible="{Binding IsBackgroundDownloadSupported}"
+            <Label  IsVisible="{Binding IsBackgroundDownloadSupported}"
                     Text="{x:Static r:Strings.ProgramInfo_AutoDownload_QueueSize_Description}"
                     Margin="0,12,0,8" />
 
-            <Picker Grid.Row="6"
-                  IsVisible="{Binding IsBackgroundDownloadSupported}"
-                  SelectedItem="{Binding SelectedDownloadOptionItem, Mode=TwoWay}"
-                  ItemsSource="{Binding DownloadOptionsItems}" />
+            <Picker IsVisible="{Binding IsBackgroundDownloadSupported}"
+                    SelectedItem="{Binding SelectedDownloadOptionItem, Mode=TwoWay}"
+                    ItemsSource="{Binding DownloadOptionsItems}" />
 
             <!--<Button Content="{x:Static r:Strings.Settings_Downloads_Button_ShowDownladInformation}" Grid.Row="7"
                     Visibility="{Binding IsBackgroundDownloadSupported, Converter={StaticResource BoolToVisibilityConverter}}"
@@ -65,7 +52,7 @@
                 </Button.Flyout>
             </Button>-->
 
-        </Grid>
+        </VerticalStackLayout>
     </ScrollView>
 
 </ContentPage>
