--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Player/CurrentPlayingPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Player/CurrentPlayingPage.xaml
@@ -82,15 +82,14 @@
                 Grid.Row="0"
                 Padding="8" 
                 IsVisible="{Binding EpisodeData, Converter={StaticResource NullToIsVisibleConverter}}"
-                HeightRequest="96"
-                Margin="0,8,0,0"
+                Margin="0,4,0,0"
                 VerticalOptions="Start"
                 HorizontalOptions="Fill"
                 >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="24" />
-                    <RowDefinition Height="32" />
-                    <RowDefinition Height="26" />
+                    <RowDefinition Height="36" />
+                    <RowDefinition Height="24" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
@@ -100,8 +99,8 @@
                 <Image Grid.Row="0"
                         Grid.Column="0"
                         Grid.RowSpan="3"
-			            WidthRequest="96"
-			            HeightRequest="96"
+			            WidthRequest="84"
+			            HeightRequest="84"
                         Margin="0,0,8,0">
                     <Image.Source>
                         <UriImageSource Uri="{Binding EpisodeData.EpisodeImage.HighResolution, Mode=OneWay}"
@@ -113,34 +112,34 @@
 
                 <Label  Grid.Row="0"
                         Grid.Column="1"
-                        HorizontalOptions="StartAndExpand"
-                        FontSize="20"
+                        HorizontalOptions="Start"
+                        FontSize="18"
                         Style="{StaticResource ListHeaderTextStyle}"
-                        VerticalOptions="Center"
+                        VerticalOptions="Start"
 				        LineBreakMode="TailTruncation"
 				        MaxLines="1"
 				>
                     <Label.Text>
                         <MultiBinding StringFormat="{}{0} - {1}">
-                            <Binding Path="EpisodeData.ProgramName" />
                             <Binding Path="EpisodeData.Title" />
+                            <Binding Path="EpisodeData.ProgramName" />
                         </MultiBinding>
                     </Label.Text>
                 </Label>
 
                 <Label  Grid.Row="1"
                         Grid.Column="1"
-                        HorizontalOptions="StartAndExpand"
+                        HorizontalOptions="Start"
                         Padding="0,0,20,0"
                         Style="{StaticResource ListNormalTextStyle}"
                         Text="{Binding EpisodeData.Description, Mode=OneWay}"
                         MaxLines="2"
 				        />
 
-                <HorizontalStackLayout Grid.Row="2" Grid.Column="1" Margin="0,12,0,0" Spacing="8">
+                <HorizontalStackLayout Grid.Row="2" Grid.Column="1" Padding="0,0,0,0" Spacing="8">
                     <Label  
                         Style="{StaticResource DetailedTextStyle}"
-                        VerticalOptions="Center"
+                        VerticalOptions="End"
 				        LineBreakMode="TailTruncation"
 				        MaxLines="1"
 				        >
@@ -154,7 +153,7 @@
 
                     <!--<Label  
                         Style="{StaticResource ListNormalTextStyle}"
-                        VerticalOptions="Center"
+                        VerticalOptions="End"
 				        LineBreakMode="TailTruncation"
 				        MaxLines="1"
 				        >
@@ -168,7 +167,7 @@
                     
                     <Label  
                         Style="{StaticResource DetailedTextStyle}"
-                        VerticalOptions="Center"
+                        VerticalOptions="End"
 				        LineBreakMode="TailTruncation"
 				        MaxLines="1"
                         Text="{Binding EpisodeData.DownloadData.DownloadStatusText, Mode=OneWay}"
@@ -178,7 +177,7 @@
                     <Button Command="{Binding EpisodeData.DownloadCommand}"
                             IsVisible="{Binding EpisodeData.CanDownload}"
                             Style="{StaticResource InlineHyperlinkButton}"
-                            Margin="-8,2,0,0"
+                            Margin="-8,8,0,0"
                             Text="{x:Static r:Strings.General_Download}"
                             />
                     
