--- a/Source/Pekspro.RadioStorm.MAUI/Views/CurrentPlayingControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/CurrentPlayingControl.xaml
@@ -68,6 +68,7 @@
 			   Grid.RowSpan="2"
 			   WidthRequest="48"
 			   HeightRequest="48"
+               Aspect="AspectFill"
                 >
             <Image.Source>
                 <UriImageSource Uri="{Binding EpisodeData.EpisodeImage.LowResolution, Mode=OneWay}"
