Adds And and Or converters

--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -369,6 +369,9 @@
             <converters:BoolToIntConverter x:Key="LiveAudioToHeightConverter" TrueValue="64" FalseValue="102"/>
             <converters:BoolToDoubleConverter x:Key="BoolToDoubleOneAndHalfConverter" TrueValue="1" FalseValue="0.43"/>
             <converters:MultiplierConverter x:Key="MultiplierConverter" />
+            <converters:EmptyToBoolConverter x:Key="EmptyToBoolConverter" />
+            <converters:AndConverter x:Key="AndConverter" />
+            <converters:OrConverter x:Key="OrConverter" />
             <converters:LargerThanZeroConverter x:Key="LargerThanZeroConverter" />
 
             <converters:DownloadDataStatusToVisibilityConverter VisibilityValue="Done"
